# ai-school-agentic-app

./: .env.example  .gitignore  README.md  pyproject.toml
eval/: dataset.jsonl  rubric.md  run_eval.py
src/ai_school_agentic_app/: __init__.py  agent.py  cli.py  config.py  mcp_client.py  prompts.py  tool_schema.py
src/mcp_servers/: newsdata_mcp_server.py  weather_mcp_server.py
tests/: test_agent_routing.py  test_tool_schema.py
